# db_in_json

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
json-db/: main.py  queries.py
tests/: test_1.py
